# rnet

./: .gitignore  .readthedocs.yaml  CNAME  Cargo.toml  README.md  RELEASE.md  blocking.pyi  cliff.toml  pyproject.toml  rnet.pyi  versions.json
.cargo/: config.toml
.github/: build.sh  musl_build.sh
.github/workflows/: ci.yml  docs.yml
3.0.0rc20/: 404.html  index.html  sitemap.xml
3.0.0rc20/sponsors/: index.html
bench/: README.md  bench.py  benchmark.py  benchmark_results.csv  server.py
benchmark/: bench.py
docs/: README.md  mkdocs.yml
docs/source/: index.md  sponsors.md
examples/: client.py  header_map.py  http2_websocket.py  impersonate.py  req.py  ws.py
examples/blocking/: auth.py  base_url.py  basic_auth.py  bearer_auth.py  body.py  client.py  form.py  get.py  impersonate.py  json.py  multipart.py  proxy.py  query.py  req.py  stream.py  ws.py
latest/: index.html  sitemap.xml
latest/search/: search_index.json
latest/sponsors/: index.html
python/: README.md
python/benchmark/: README.md  benchmark_results.csv  chart.py  requirements.txt
python/docs/: mkdocs.yml  requirements.txt
python/examples/: auth.py  client.py  emulation.py  exceptions.py  form.py  get.py  http2_websocket.py  keylog.py  orig_headers.py  proxy.py  query.py  redirect.py
python/rnet/: __init__.py  (+20 more)
rnet/: __init__.pyi  blocking.pyi  cookie.pyi  enums.pyi  exceptions.py  header.pyi
src/: browser.rs  buffer.rs  client.rs  cookie.rs  dns.rs  emulation.rs  error.rs  extractor.rs  future.rs  header.rs  http.rs  http1.rs  http2.rs  lib.rs  macros.rs  proxy.rs  redirect.rs  resp.rs  rt.rs  stream.rs  tls.rs
tests/: badssl_test.py  client_test.py  cookie_test.py  dns_test.py  header_map.py  header_map_test.py  header_test.py  multipart_test.py  redirect_test.py  request_test.py  resp_test.py  response_test.py  send_body_test.py  tls_test.py  url_normalization_test.py
(+164 files in other folders)
