[package]
name = "rnet"
version = "2.4.2"
description = "A blazing-fast Python HTTP client with TLS fingerprint"
edition = "2024"
rust-version = "1.85.0"
license = "GPL-3.0"
repository = "https://github.com/0x676e67/rnet"
authors = ["0x676e67 <gngppz@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rnet"
crate-type = ["cdylib"]
doctest = false

[features]
default = ["abi3"]

# we build cp311-abi3 and cp310 wheels now, move this to pyo3 after we drop cp310
abi3 = ["pyo3/abi3-py311"]

[dependencies]
tokio = "1.47.1"
pyo3 = { version = "0.25.1", features = [
    "indexmap",
    "multiple-pymethods",
    "generate-import-lib",
] }
pyo3-async-runtimes = { version = "0.25.0", features = [
    "tokio-runtime",
    "unstable-streams",
] }
serde = { version = "1.0.219", features = ["derive"] }
mime = "0.3.17"
indexmap = { version = "2.10.0", features = ["serde"] }
arc-swap = "1.7.1"
url = "2.5.4"
bytes = "1.10.1"
futures-util = { version = "0.3.31", default-features = false }
cookie_crate = { version = "0.18", package = "cookie" }
cookie_store = { version = "0.22" }
wreq = { version = "6.0.0-rc.2", features = [
    "json",
    "socks",
    "stream",
    "multipart",
    "gzip",
    "brotli",
    "deflate",
    "zstd",
    "ws",
    "cookies",
    "hickory-dns",
] }
wreq-util = { version = "3.0.0-rc.1", features = ["emulation-rand"] }

[target.'cfg(all(not(target_env = "msvc"), not(all(target_os = "linux", target_env = "gnu"))) )'.dependencies]
jemallocator = { package = "tikv-jemallocator", version = "0.6", features = [
    "disable_initial_exec_tls",
    "unprefixed_malloc_on_supported_platforms",
] }

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
strip = true
panic = "abort"
